# cbot

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  COPYING  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
cbot/: __init__.py  run_client.py  run_server.py
cbot/client_cli/: tcp_client.py
cbot/client_web/: .gitignore  angular.json  git-version-gen.js  karma.conf.js  ngsw-config.json  package-lock.json  package.json  tsconfig.json
cbot/client_web/src/: index.html  main.ts  manifest.webmanifest
cbot/client_web/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
cbot/client_web/src/app/binlive/: binlive.component.html  binlive.component.ts
cbot/client_web/src/app/services/: stream.service.spec.ts  stream.service.ts  utils.service.ts
cbot/client_web/src/app/task/: task.d.ts  (+1 more)
cbot/client_web/src/environments/: environment.ts
cbot/server/: __init__.py  config.py  event_bus.py  exchange.py  logger.py  mail.py  memstore.py  operation.py  periodic.py  savegame.py  task.py  task_manager.py  tcp_server.py  types.py  utils.py  ws_server.py
cbot/server/tasks/: __init__.py  data.py  job_bin_live.py  job_cmc_latest.py  job_crypto_order.py  job_crypto_pf.py  job_crypto_stats.py  job_crypto_ticker.py  job_crypto_tsl.py  job_ping.py  test_job_crypto_tsl.py
conf/docker/etc/: supervisord.conf
conf/etc/cbot/: cbot.conf
conf/etc/logrotate.d/: cbot
conf/etc/supervisord.d/: cbot.ini
scripts/: build-docker-platforms.sh  build-docker.sh
(+12 files in other folders)
