[tool.poetry]
name = "cbot"
version = "0.1.0"
description = ""
authors = ["WAP"]

[tool.poetry.dependencies]
python = "^3.11"
ccxt = "4.4.12"
pandas = "1.4.1"
pycron = "3.0.0"
python-binance = "1.0.19"
requests = "2.32.3"
setproctitle = "1.2.2"
stockstats = "0.3.2"
websockets = "13.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pylint = "2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
